--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1>World Clock</h1>
     <footer>
       This project was coded by N Motseki and is a
-      <a href="#" target="_blank">open sourced on GitHub </a>
+      <a href="https://github.com/N-Motseki/World-Clock" target="_blank"
+        >open sourced on GitHub
+      </a>
     </footer>
     <script src="js/index.js"></script>
   </body>
