--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
   </head>
   <body>
     <h1>World Clock</h1>
+    <select>
+      <option value="">select a city</option>
+      <option value="">Los Angeles</option>
+      <option value="">Paris</option>
+      <option value="">London</option>
+      <option value="">Tokyo</option>
+      <option value="">Sydney</option>
+    </select>
+    <div class="city">
+      <h2>Los Angeles</h2>
+      <p>
+        August 20, 2024<br />
+        <span class="time"> 16:55pm</span>
+      </p>
+      <h3>Paris</h3>
+      <p>
+        August 20, 2024<br />
+        <span class="time"> 16:55pm</span>
+      </p>
+      <h4>London</h4>
+      <p>
+        August 20, 2024<br />
+        <span class="time"> 16:55pm</span>
+      </p>
+    </div>
     <footer>
       This project was coded by N Motseki and is a
       <a href="https://github.com/N-Motseki/World-Clock" target="_blank"
