Styled the project with css

--- a/index.html
+++ b/index.html
@@ -7,38 +7,40 @@
     <title>World Clock- Nmotseki</title>
   </head>
   <body>
-    <h1>World Clock</h1>
-    <select>
-      <option value="">select a city</option>
-      <option value="">Los Angeles</option>
-      <option value="">Paris</option>
-      <option value="">London</option>
-      <option value="">Tokyo</option>
-      <option value="">Sydney</option>
-    </select>
-    <div class="city">
-      <h2>Los Angeles</h2>
-      <p>
-        August 20, 2024<br />
-        <span class="time"> 16:55pm</span>
-      </p>
-      <h3>Paris</h3>
-      <p>
-        August 20, 2024<br />
-        <span class="time"> 16:55pm</span>
-      </p>
-      <h4>London</h4>
-      <p>
-        August 20, 2024<br />
-        <span class="time"> 16:55pm</span>
-      </p>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select>
+        <option value="">select a city</option>
+        <option value="">Los Angeles</option>
+        <option value="">Paris</option>
+        <option value="">London</option>
+        <option value="">Tokyo</option>
+        <option value="">Sydney</option>
+      </select>
+      <div class="city">
+        <div>
+          <h2>Los Angeles</h2>
+          <div class="date">August 20,2024</div>
+        </div>
+
+        <div class="time">16:55:25 <small> Am</small></div>
+      </div>
+      <div class="city">
+        <div>
+          <h2>London</h2>
+          <div class="date">August 20,2024</div>
+        </div>
+
+        <div class="time">16:55:25 <small> Am</small></div>
+      </div>
     </div>
     <footer>
-      This project was coded by N Motseki and is a
+      This project was coded by<strong> N Motseki🌺 </strong> and is a
       <a href="https://github.com/N-Motseki/World-Clock" target="_blank"
         >open sourced on GitHub
       </a>
     </footer>
+
     <script src="js/index.js"></script>
   </body>
 </html>
