--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.46/moment-timezone-with-data-1970-2030.min.js"></script>
     <link rel="stylesheet" href="css/styles.css" />
     <title>World Clock- Nmotseki</title>
   </head>
@@ -17,21 +19,21 @@
         <option value="">Tokyo</option>
         <option value="">Sydney</option>
       </select>
-      <div class="city">
+      <div class="city" id="los-angeles">
         <div>
           <h2>Los Angeles</h2>
-          <div class="date">August 20,2024</div>
+          <div class="date"></div>
         </div>
 
-        <div class="time">16:55:25 <small> Am</small></div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="london">
         <div>
           <h2>London</h2>
-          <div class="date">August 20,2024</div>
+          <div class="date"></div>
         </div>
 
-        <div class="time">16:55:25 <small> Am</small></div>
+        <div class="time"></div>
       </div>
     </div>
     <footer>
