--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
       <select id="city">
         <option value="">select a city</option>
+        <option value="current">My current location</option>
         <option value="America/Los Angeles">Los Angeles</option>
         <option value="Europe/Paris">Paris</option>
         <option value="Europe/London">London</option>
